<resources>
    <string name="app_name">Tienda_de_Rosita</string>
    <string name="registrate">Registrate</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingrese_contrase_a">Ingrese Contraseña.</string>
    <string name="ingrese_usuario">Ingrese Usuario.</string>
    <string name="todo">TODO</string>
    <string name="tienda_de_rosita">TIENDA DE ROSITA</string>
    <string name="saquese_la_espinita_del_antojo">Saquese la espinita del antojo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>