<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2A2C0"
    tools:context=".view.ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="393dp"
        android:layout_height="224dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="361dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/muff"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="295dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="330dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/ingrese_usuario"
        android:textColor="#A1887F"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="279dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="249dp"
        android:autofillHints=""
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="@string/ingrese_contrase_a"
        android:textColor="#A1887F"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="140dp"
        android:background="@color/morado_2"
        android:backgroundTint="#3F51B5"
        android:text="@string/ingresar"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registrate"
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="52dp"
        android:background="@color/morado_1"
        android:backgroundTint="@color/morado_1"
        android:text="@string/registrate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/rosado_1"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/tienda_de_rosita"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="47sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:background="@color/rosado_1"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/saquese_la_espinita_del_antojo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp" />

</RelativeLayout>